Layout issues in SupplierForm fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -115,3 +115,6 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+.MuiInput-underline:after{
+  border-bottom: none!important;
+}
